# turbo-invention

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  compliance.md  sar-guide.md  sar-schema-2026-04-28.md
scripts/: check_no_real_data.py
src/turbo_invention/: cli.py  models.py  nltk_bootstrap.py
src/turbo_invention/analysis/: cadence.py  frequency.py  report.py  sentiment.py  topics.py
src/turbo_invention/compliance/: audit.py  fair.py  pii.py  safe.py
src/turbo_invention/corpus/: store.py
src/turbo_invention/nlp/: lemmatize.py  ngrams.py  normalize.py  stopwords.py  tokenize.py
src/turbo_invention/sar_ingest/: base.py  facebook.py
tests/: test_audit.py  test_cadence.py  test_corpus_store.py  test_facebook_parser.py  test_fair_metadata.py  test_frequency.py  test_ngrams.py  test_normalize.py  test_pii.py  test_report.py  test_safe_gate.py  test_safety_check.py  test_sentiment.py  test_tokenize.py  test_topics.py
tests/fixtures/: comments_sample.json  posts_sample.json
