[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-invention"
version = "0.1.0"
description = "Educational NLTK-first SAR corpus toolkit demonstrating UK GDPR / FAIR / SAFE."
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Yavin Owens"}]
dependencies = [
    "nltk>=3.9",
    "pandas>=2.2",
    "pyarrow>=16",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
turbo-invention = "turbo_invention.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
